@@ -168,5 +168,3 @@ Acquire focus on file name entry when activating file selection page.
 "Delete instrument" button
 
 Fix beginning dragging when file is selected by single click and following switching to tracker page.
-
-Arrows and tab in module-info page to selecting instruments/samples.
